# Bisondb

./: .clang-format  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  actual.cpp  check.txt  client.cpp  hash_map.h  helper.h  json_check.h  new.h  server.cpp  source.cpp  vector.h
.github/workflows/: ci.yml
docs/: protocol.md
src/cli/: main.cpp
src/client/: client.cpp  client.hpp
src/core/: json_parser.cpp  json_parser.hpp  platform.hpp  secure_input.cpp  secure_input.hpp  shared_mutex.hpp  version.cpp  version.hpp
src/core/auth/: roles.hpp  token_store.cpp  token_store.hpp  user_store.cpp  user_store.hpp
src/core/btree/: btree.cpp  btree.hpp  key_codec.cpp  key_codec.hpp  node.hpp  pager.cpp  pager.hpp
src/core/crypto/: crypto.cpp  crypto.hpp
src/core/net/: socket.cpp  socket.hpp  tls.cpp  tls.hpp
src/core/query/: database.cpp  database.hpp  index_manager.cpp  index_manager.hpp
src/core/store/: collection.cpp  collection.hpp
src/server/: auth_session.hpp  commands.cpp  main.cpp  protocol.cpp  protocol.hpp  server.cpp  server.hpp
src/shell/: main.cpp  parser.cpp  parser.hpp  printer.cpp  printer.hpp  repl.cpp  repl.hpp
tests/: test_auth_store.cpp  test_bson_decoder.cpp  test_bson_encoder.cpp  test_btree.cpp  test_concurrency.cpp  test_corpus.cpp  test_crypto.cpp  test_fixtures.cpp  test_json_parser.cpp  test_json_relaxed.cpp  test_json_writer.cpp  test_key_codec.cpp  test_net.cpp  test_pager.cpp  test_roundtrip.cpp  test_sanity.cpp  test_shell_parser.cpp  test_shell_printer.cpp  test_tls.cpp  test_util.hpp  test_value.cpp
tests/integration/: test_server.cpp  test_shell.cpp  test_tls_server.cpp
